# one-click-mujoco-azure

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: batched_humanoid_mjx.py  humanoid_walk.py
robot/: humanoid_demo.ipynb  simulate.py
simup/: __init__.py  azure_vm.py  cli.py  config.py  startup_script.sh
tests/: conftest.py  test_azure_vm.py  test_cli.py  test_config.py  test_deploy.py  test_helpers.py
